# gemminer

./: .hgignore  CMakeLists.txt  README.md
android-project/: local.properties
android-project/jni/: Android.mk  Application.mk
android-project/jni/src/: Android.mk
android-project/res/values/: strings.xml
cmake/: project.vcxproj.user.in
ios/GemMiner/GemMiner/: Info.plist
ios/GemMiner/GemMiner.xcodeproj/: project.pbxproj
src/: CMakeLists.txt  main.cpp
src/base/: debug.h  fs.cpp  fs.h  msvc_utf8.cpp  msvc_utf8.h  platform.h  sdlapp.cpp  sdlapp.h  singleton.h  timer.cpp  timer.h  types.h
src/game/: animation_manager.cpp  animation_manager.h  board.cpp  board.h  game.cpp  game.h  render_manager.cpp  render_manager.h  resource_manager.cpp  resource_manager.h  sprite.cpp  sprite.h  sprite_font.cpp  sprite_font.h  timer_display.cpp  timer_display.h
